<resources>
    <string name="app_name">Instagrach</string>
    <string name="logo_text">Instagrach</string>
    <string name="login_text">Log In</string>
    <string name="signup_text">Sign Up</string>
    <string name="register_text">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="password_repeat_hint">Repeat password</string>
    <string name="dont_have_account_text">Don\'t have an account?</string>
</resources>
